kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ipp-ingress
  namespace: ipp
  labels:
    app: ipp
  annotations:
    # Ingress Core Settings  
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: 	arn:aws:acm:ap-southeast-1:425563513848:certificate/4baf2a94-36ba-4785-9490-037c8065ba62
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
          - path: /* # SSL Redirect Setting
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /match/*
            backend:
              serviceName: match-service
              servicePort: 5000
          - path: /user/*
            backend:
              serviceName: user-service
              servicePort: 5001
          - path: /chat/*
            backend:
              serviceName: chat-service
              servicePort: 5003
